[project]
name = "mzkbb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord>=2.3.2",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
]
